Changed some things in the cache provider

--- a/Site/Web.config
+++ b/Site/Web.config
@@ -211,8 +211,8 @@
   </runtime>
   <translatorProvider default="yandexTranslator" cacheFilePath="/Resources/">
     <providers>
-      <add name="microsoftTranslator" type="Site.Business.Localization.MicrosoftTranslation.MicrosoftTranslatorProvider, Site" clientId="test-12345" clientSecret="TagwfuvpMmTC7UZA/6qPmVvrcRvHLnuy4PzPRjui788=" />
-      <add name="yandexTranslator" type="Site.Business.Localization.YandexTranslation.YandexTranslatorProvider, Site" apiKey="trnsl.1.1.20140915T083404Z.7f0a869fdb962460.27998153df890828969cea616d7478cb66a64966" />
+      <add name="microsoftTranslator" type="Site.Business.Localization.MicrosoftTranslation.MicrosoftTranslatorProvider, Site" clientId="" clientSecret="" />
+      <add name="yandexTranslator" type="Site.Business.Localization.YandexTranslation.YandexTranslatorProvider, Site" apiKey="" />
     </providers>
   </translatorProvider>
   <episerver>
